# py-ecies-p256

./: README.md  pyproject.toml
examples/: demo.py
src/ecies/: aead.py  ecies.py  field.py  hkdf.py  p256.py
src/py_ecies_p256.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_aead.py  test_curve.py  test_ecies.py  test_field.py  test_hkdf.py
